# sqproxy

./: .bumpversion.cfg  .gitignore  .travis.yml  CHANGELOG.md  Dockerfile.ebpf  Makefile  README.md  README.rst  compile.py  config.example.json  daemon.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  update_setup.py
.github/: FUNDING.yml
.github/workflows/: release.yml  tests.yml
examples/conf.d/: 00-globals.yaml  01-dummy-game.yaml  02-hlds-game.yaml  dummy_hlds_entrypoint.py
examples/systemd/system/: sqproxy.service
source/: messages.py  util.py
source_query_proxy/: __main__.py  cli.py  config.py  daemon.py  dict_merge.py  ebpf_template.py  epbf.py  logging.py  pid_tracker.py  proxy.py  stats.py  transport.py  utils.py
source_query_proxy/source/: messages.py  util.py
tests/: conftest.py  test_config_read.py  test_ebpf.py  test_proxy.py  test_transport.py
tests/fixtures/: config.py
