[tool.poetry]
name = "source-query-proxy"
version = "0.15.0"
description = "Async proxy for Source Engine Query Protocol"
authors = ["spumer <spumer-tm@yandex.ru>"]
license = "GPL-3.0"
homepage = "https://github.com/spumer/source-query-proxy"
readme = 'README.md'  # Markdown files are supported
keywords = ['valve', 'source', 'engine', 'proxy', 'query', 'cache']

[tool.poetry.dependencies]
python = "^3.5"
uvloop = "0.12.2"
pylru = "1.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
